# python-assignment

./: README.md  setup.cfg  setup.py
src/reportinput/: __init__.py  report_params.py
tests/: test_report_params.py
