[metadata]
name = reportinput
version = 0.0.1
author = James Westfall
author_email = james.westfall@neat.no
description = Works out the parameters for your report
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pytest

[options.packages.find]
where = src

[flake8]
ignore = E306, E701, E731, W503, W504
max-line-length = 160


[mypy]
ignore_missing_imports = True
no_implicit_optional = False
check_untyped_defs = False
disable_error_code = annotation-unchecked
